finished frontend and fixed cors errors